Add equations and fitting functionalities; implement Gaussian fitting and visualization for neural activity data; refactor simulator to utilize new fit and visualize modules.

--- a/1D/test.ipynb
+++ b/1D/test.ipynb
@@ -2,28 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pajucg/anaconda3/envs/comphys/lib/python3.12/site-packages/setuptools/_distutils/_msvccompiler.py:12: UserWarning: _get_vc_env is private; find an alternative (pypa/distutils#340)\n",
-      "  warnings.warn(\n",
-      "WARNING    /home/pajucg/anaconda3/envs/comphys/lib/python3.12/site-packages/numba/core/decorators.py:246: RuntimeWarning: nopython is set for njit and is ignored\n",
-      "  warnings.warn('nopython is set for njit and is ignored', RuntimeWarning)\n",
-      " [py.warnings]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import sys\n",
     "import os\n",
-    "import RingAttractorModel\n",
-    "import utils"
+    "import RingAttractorModel"
    ]
   },
   {
@@ -51,8 +38,9 @@
    ],
    "source": [
     "parameters = {'w_EE': 0.719, 'w_EI': 0.143, 'w_IE': 0.74, 'w_II': 0.01, 'w_EP': 0.012, 'w_PE': 0.709, 'w_PP': 0.01}\n",
+    "p = RingAttractorModel.Parameters(**parameters)\n",
     "\n",
-    "r = RingAttractorModel.RingAttractorNetwork()\n",
+    "r = RingAttractorModel.Simulator(parameters=p)\n",
     "r.run(t_epg_open=200,\n",
     "      t_epg_close=300,\n",
     "      t_pen_open=2000,\n",
